# rust_python_server

./: .gitignore  Cargo.toml  README.md  locustfile.py
docs/: BENCHMARK.md
example/: app.py  locustfile.py  model.py  predict.py  pyproject.toml  train.py
example/example/: app.py  model.py  predict.py  train.py
example/example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: main.rs
