[package]
name = "rust_python_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
pyo3 = "0.20.0"
serde =   { version = "1.0.191", features = ["derive"] } 
serde_json = "1.0.108"
tokio =  { version =  "1.33.0", features = ["full"] }
